--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <HTML>
 	<body>
-		<h1>Hello Dapps!</h1>
+		<h1>Minimum dapp</h1>
 		<h2 id="account"></h2>
 		<h2 id="message"></h2>
 		<form id="messageForm">
